fixed visible index

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -77,8 +77,8 @@
 	.image-slider{
 		.kaarousel-slide{
 			
-			// min-height: 300px;
 			padding: 0;
+			text-align: center !important;
 
 			& > img {
 				box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
